--- a/image.html
+++ b/image.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="image">
-        <img src="https://cdn.pixabay.com/photo/2024/01/18/14/46/train-8517089_1280.jpg" alt="">
+        <img src="370382.jpg" alt="">
         <div class="arrow">
         <a href=""><span style="font-size: 30px;color: grey;"><i class="fa-solid fa-arrow-left"></i></span></a>
     </div>
